serviceLoadBalance.yml
apiVersion: v1
kind: Service
metadata:
  name: testing-kube-service
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 3000
  selector:
    name: testing-kube-pod
    app: testing-kube-app
